<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.7" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="0.7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:background="@drawable/bg_border_round_grey"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/icon_acount"
            android:drawablePadding="@dimen/dp10"
            android:hint="@string/login_tel_hint"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />

        <EditText
            android:id="@+id/editPwd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/icon_pwd"
            android:drawablePadding="@dimen/dp10"
            android:hint="@string/login_pwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dp10"
        android:paddingBottom="@dimen/dp5"
        android:paddingLeft="@dimen/dp5"
        android:paddingTop="@dimen/dp5"
        android:text="@string/forget_pwd"
        android:textSize="@dimen/sp12" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_login_btn"
        android:gravity="center"
        android:text="@string/login_txt"
        android:textColor="@color/white" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/llRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_count"
            android:textSize="@dimen/sp12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp12" />
    </LinearLayout>


</LinearLayout>