<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/dp22"
        android:layout_marginTop="@dimen/dp10"
        android:padding="@dimen/dp10"
        android:src="@drawable/fork" />

    <View
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/register_tip"
        android:textColor="@color/grey15"
        android:textSize="@dimen/sp20" />

    <LinearLayout
        android:id="@+id/llRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp48"
        android:layout_marginRight="@dimen/dp48"
        android:background="@drawable/bg_border_round_grey"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@null"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLength="11"
            android:paddingRight="20dp"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:layout_marginLeft="@dimen/dp20"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/code"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="21dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:background="@color/grey16" />

            <TextView
                android:id="@+id/tvSendCode"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp14"
                android:gravity="center"
                android:text="@string/send_code"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />

        <EditText
            android:id="@+id/editPwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@null"
            android:hint="@string/hint_new_pwd"
            android:paddingRight="20dp"
            android:inputType="textPassword"
            android:textColor="@color/grey6"
            android:textSize="14sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />

        <EditText
            android:id="@+id/editConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:layout_marginLeft="@dimen/dp20"
            android:inputType="textPassword"
            android:background="@null"
            android:hint="@string/hint_confirm_new_pwd"
            android:paddingRight="20dp"
            android:textColor="@color/grey6"
            android:textSize="14sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvSure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp55"
        android:layout_below="@id/llRegister"
        android:layout_marginLeft="@dimen/dp48"
        android:layout_marginRight="@dimen/dp48"
        android:layout_marginTop="53dp"
        android:background="@drawable/bg_login_btn"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>