<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="@dimen/dp10"
        android:src="@drawable/fork"
        android:layout_marginLeft="@dimen/dp22"
        android:layout_marginTop="@dimen/dp10"/>

    <View
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp20"
        android:textColor="@color/grey15"
        android:text="@string/register_tip"
        android:layout_marginBottom="42dp"/>

    <LinearLayout
        android:id="@+id/llRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_border_round_grey"
        android:layout_marginLeft="@dimen/dp48"
        android:layout_marginRight="@dimen/dp48"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/name"
                android:textColor="@color/grey6"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_name"
                android:maxLength="10"
                android:paddingRight="20dp"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/phone"
                android:textColor="@color/grey6"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp55"
                android:background="@null"
                android:hint="@string/hint_phone"
                android:inputType="number"
                android:maxLength="11"
                android:paddingRight="20dp"
                android:textSize="14sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:orientation="horizontal">

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/code"
                android:textColor="@color/grey6"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_code"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="21dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:background="@color/grey16" />

            <TextView
                android:id="@+id/tvSendCode"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dp14"
                android:gravity="center"
                android:text="@string/send_code"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:orientation="horizontal">

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/pwd"
                android:textColor="@color/grey6"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editPwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp55"
                android:background="@null"
                android:hint="@string/hint_pwd"
                android:paddingRight="20dp"
                android:inputType="textPassword"
                android:textColor="@color/grey6"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />
        <LinearLayout
            android:id="@+id/llAddresss"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="所在省市区(县)"
                android:textColor="@color/grey6"
                android:textSize="14sp"
                android:id="@+id/textView33" />

            <TextView
                android:id="@+id/tvAddresss"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/dp10"
                android:layout_height="@dimen/dp55"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingRight="20dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="14sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />
        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="所在村(街道)"
                android:textColor="@color/grey6"
                android:textSize="14sp"
                android:id="@+id/textView3" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/dp10"
                android:layout_height="@dimen/dp55"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingRight="20dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="14sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey14" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp55"
            android:orientation="horizontal">

            <TextView
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="邀请码"
                android:textColor="@color/grey6"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/ed_yq_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp55"
                android:background="@null"
                android:hint="可不填"
                android:paddingRight="20dp"
                android:paddingLeft="@dimen/sp20"
                android:inputType="number"
                android:textColor="@color/grey6"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp55"
        android:layout_below="@id/llRegister"
        android:layout_marginTop="53dp"
        android:background="@drawable/bg_login_btn"
        android:layout_marginLeft="@dimen/dp48"
        android:layout_marginRight="@dimen/dp48"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <View
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>