<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/comm_gray_bg">

    <include layout="@layout/common_toplayout"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey18"
        android:layout_marginTop="@dimen/dp20"/>
    <EditText
        android:id="@+id/etOldPwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:inputType="textPassword"
        android:hint="@string/hint_old_pwd"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20"
        android:textSize="@dimen/sp18"
        android:textColor="@color/grey15"
        android:background="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey18"
        android:layout_marginBottom="@dimen/dp15"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey18"/>
    <EditText
        android:id="@+id/etNewPwd"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="@dimen/dp45"
        android:hint="@string/hint_new_pwd"
        android:textColor="@color/grey15"
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp20"
        android:textSize="@dimen/sp18"
        android:background="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey18"
        android:layout_marginBottom="@dimen/dp15"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey18"/>
    <EditText
        android:id="@+id/etConformNewPwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:hint="@string/hint_confirm_new_pwd"
        android:paddingLeft="@dimen/dp20"
        android:textColor="@color/grey15"
        android:inputType="textPassword"
        android:paddingRight="@dimen/dp20"
        android:textSize="@dimen/sp18"
        android:background="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey18"/>

</LinearLayout>